[gd_scene load_steps=4 format=3 uid="uid://btfqyot8mm4tc"]

[ext_resource type="PackedScene" uid="uid://dh3tlmtkluu1i" path="res://special_levels/SpecialLevelBase.tscn" id="1_xdfj5"]
[ext_resource type="Script" path="res://special_levels/tutorial.gd" id="2_k0sr3"]
[ext_resource type="PackedScene" uid="uid://bqghgbvpu0p5x" path="res://item.tscn" id="2_xl3h2"]

[node name="Tutorial" instance=ExtResource("1_xdfj5")]
layer_0/name = "background"
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 0, 0, 917505, 0, 0, 983041, 0, 0, 1048577, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 655362, 4, 720898, 655362, 4, 786434, 655362, 4, 851970, 655362, 4, 917506, 655362, 4, 983042, 655362, 4, 1048578, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 720898, 4, 720899, 720898, 4, 786435, 720898, 4, 851971, 720898, 4, 917507, 720898, 4, 983043, 720898, 4, 1048579, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 720898, 4, 720900, 720898, 4, 786436, 720898, 4, 851972, 720898, 4, 917508, 720898, 4, 983044, 720898, 4, 1048580, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 720898, 4, 720901, 720898, 4, 786437, 720898, 4, 851973, 720898, 4, 917509, 720898, 4, 983045, 720898, 4, 1048581, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 720898, 4, 720902, 720898, 4, 786438, 720898, 4, 851974, 720898, 4, 917510, 720898, 4, 983046, 720898, 4, 1048582, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 720898, 4, 720903, 720898, 4, 786439, 720898, 4, 851975, 720898, 4, 917511, 720898, 4, 983047, 720898, 4, 1048583, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 720898, 4, 720904, 720898, 4, 786440, 720898, 4, 851976, 720898, 4, 917512, 720898, 4, 983048, 720898, 4, 1048584, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 720898, 4, 720905, 720898, 4, 786441, 720898, 4, 851977, 720898, 4, 917513, 720898, 4, 983049, 720898, 4, 1048585, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 720898, 4, 720906, 720898, 4, 786442, 720898, 4, 851978, 720898, 4, 917514, 720898, 4, 983050, 720898, 4, 1048586, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 720898, 4, 720907, 720898, 4, 786443, 720898, 4, 851979, 720898, 4, 917515, 720898, 4, 983051, 720898, 4, 1048587, 0, 0, 12, 0, 0, 65548, 655362, 4, 131084, 655362, 4, 196620, 655362, 4, 262156, 655362, 4, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 720898, 3, 720908, 720898, 4, 786444, 720898, 4, 851980, 720898, 4, 917516, 720898, 4, 983052, 720898, 4, 1048588, 0, 0, 13, 0, 0, 65549, 720898, 4, 131085, 720898, 4, 196621, 720898, 4, 262157, 720898, 4, 327693, 655362, 4, 393229, 655362, 4, 458765, 655362, 4, 524301, 655362, 4, 589837, 655362, 4, 655373, 720898, 4, 720909, 720898, 4, 786445, 720898, 4, 851981, 720898, 4, 917517, 720898, 4, 983053, 720898, 4, 1048589, 0, 0, 14, 0, 0, 65550, 720898, 4, 131086, 720898, 4, 196622, 720898, 4, 262158, 720898, 4, 327694, 786434, 4, 393230, 786434, 4, 458766, 786434, 4, 524302, 786434, 4, 589838, 786434, 4, 655374, 720898, 4, 720910, 720898, 4, 786446, 720898, 4, 851982, 720898, 4, 917518, 720898, 4, 983054, 720898, 4, 1048590, 0, 0, 15, 0, 0, 65551, 786434, 4, 131087, 786434, 4, 196623, 786434, 4, 262159, 786434, 4, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 720898, 3, 720911, 720898, 4, 786447, 720898, 4, 851983, 720898, 4, 917519, 720898, 4, 983055, 720898, 4, 1048591, 0, 0, 16, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, 589840, 0, 0, 655376, 720898, 4, 720912, 720898, 4, 786448, 720898, 4, 851984, 720898, 4, 917520, 720898, 4, 983056, 720898, 4, 1048592, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 0, 0, 655377, 720898, 4, 720913, 720898, 4, 786449, 720898, 4, 851985, 720898, 4, 917521, 720898, 4, 983057, 720898, 4, 1048593, 0, 0, 18, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 655378, 720898, 4, 720914, 720898, 4, 786450, 720898, 4, 851986, 720898, 4, 917522, 720898, 4, 983058, 720898, 4, 1048594, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 0, 327699, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, 589843, 0, 0, 655379, 720898, 4, 720915, 720898, 4, 786451, 720898, 4, 851987, 720898, 4, 917523, 720898, 4, 983059, 720898, 4, 1048595, 0, 0, 20, 0, 0, 65556, 0, 0, 131092, 0, 0, 196628, 0, 0, 262164, 0, 0, 327700, 0, 0, 393236, 0, 0, 458772, 0, 0, 524308, 0, 0, 589844, 0, 0, 655380, 720898, 4, 720916, 720898, 4, 786452, 720898, 4, 851988, 720898, 4, 917524, 720898, 4, 983060, 720898, 4, 1048596, 0, 0, 21, 0, 0, 65557, 0, 0, 131093, 0, 0, 196629, 0, 0, 262165, 0, 0, 327701, 0, 0, 393237, 0, 0, 458773, 0, 0, 524309, 0, 0, 589845, 0, 0, 655381, 720898, 4, 720917, 720898, 4, 786453, 720898, 4, 851989, 720898, 4, 917525, 720898, 4, 983061, 720898, 4, 1048597, 0, 0, 22, 0, 0, 65558, 0, 0, 131094, 0, 0, 196630, 0, 0, 262166, 0, 0, 327702, 0, 0, 393238, 0, 0, 458774, 0, 0, 524310, 0, 0, 589846, 0, 0, 655382, 720898, 4, 720918, 720898, 4, 786454, 720898, 4, 851990, 720898, 4, 917526, 720898, 4, 983062, 720898, 4, 1048598, 0, 0, 23, 0, 0, 65559, 0, 0, 131095, 0, 0, 196631, 0, 0, 262167, 0, 0, 327703, 0, 0, 393239, 0, 0, 458775, 0, 0, 524311, 0, 0, 589847, 0, 0, 655383, 720898, 4, 720919, 720898, 4, 786455, 720898, 4, 851991, 720898, 4, 917527, 720898, 4, 983063, 720898, 4, 1048599, 0, 0, 24, 0, 0, 65560, 0, 0, 131096, 0, 0, 196632, 0, 0, 262168, 0, 0, 327704, 0, 0, 393240, 0, 0, 458776, 0, 0, 524312, 0, 0, 589848, 0, 0, 655384, 720898, 4, 720920, 720898, 4, 786456, 720898, 4, 851992, 720898, 4, 917528, 720898, 4, 983064, 720898, 4, 1048600, 0, 0, 25, 0, 0, 65561, 0, 0, 131097, 0, 0, 196633, 0, 0, 262169, 0, 0, 327705, 0, 0, 393241, 0, 0, 458777, 0, 0, 524313, 0, 0, 589849, 0, 0, 655385, 720898, 4, 720921, 720898, 4, 786457, 720898, 4, 851993, 720898, 4, 917529, 720898, 4, 983065, 720898, 4, 1048601, 0, 0, 26, 0, 0, 65562, 0, 0, 131098, 0, 0, 196634, 0, 0, 262170, 0, 0, 327706, 0, 0, 393242, 0, 0, 458778, 0, 0, 524314, 0, 0, 589850, 0, 0, 655386, 786434, 4, 720922, 786434, 4, 786458, 786434, 4, 851994, 786434, 4, 917530, 786434, 4, 983066, 786434, 4, 1048602, 0, 0, 27, 0, 0, 65563, 0, 0, 131099, 0, 0, 196635, 0, 0, 262171, 0, 0, 327707, 0, 0, 393243, 0, 0, 458779, 0, 0, 524315, 0, 0, 589851, 0, 0, 655387, 0, 0, 720923, 0, 0, 786459, 0, 0, 851995, 0, 0, 917531, 0, 0, 983067, 0, 0, 1048603, 0, 0, 28, 0, 0, 65564, 0, 0, 131100, 0, 0, 196636, 0, 0, 262172, 0, 0, 327708, 0, 0, 393244, 0, 0, 458780, 0, 0, 524316, 0, 0, 589852, 0, 0, 655388, 0, 0, 720924, 0, 0, 786460, 0, 0, 851996, 0, 0, 917532, 0, 0, 983068, 0, 0, 1048604, 0, 0)
layer_1/name = "foreground"
layer_1/tile_data = PackedInt32Array(262146, 3, 0, 327682, 3, 1, 393218, 3, 2, 458754, 3, 3, 524290, 3, 4, 262147, 65539, 0, 327683, 65539, 1, 393219, 65539, 2, 458755, 65539, 3, 524291, 65539, 4, 589827, 65539, 5, 262148, 131075, 0, 327684, 131075, 1, 393220, 131075, 2, 458756, 131075, 3, 524292, 131075, 4, 262149, 3, 0, 327685, 3, 1, 393221, 3, 2, 458757, 3, 3, 524293, 3, 4, 262150, 65539, 0, 327686, 65539, 1, 393222, 65539, 2, 458758, 65539, 3, 524294, 65539, 4, 589830, 65539, 5, 262151, 131075, 0, 327687, 131075, 1, 393223, 131075, 2, 458759, 131075, 3, 524295, 131075, 4, 262152, 3, 0, 327688, 3, 1, 393224, 3, 2, 458760, 3, 3, 524296, 3, 4, 262153, 65539, 0, 327689, 65539, 1, 393225, 65539, 2, 458761, 65539, 3, 524297, 65539, 4, 589833, 65539, 5, 262154, 131075, 0, 327690, 131075, 1, 393226, 131075, 2, 458762, 131075, 3, 524298, 131075, 4, 262155, 3, 0, 327691, 3, 1, 393227, 3, 2, 458763, 3, 3, 524299, 3, 4, 262156, 65539, 0, 327692, 65539, 1, 393228, 65539, 2, 458764, 65539, 3, 524300, 65539, 4, 589836, 65539, 5, 262157, 131075, 0, 327693, 131075, 1, 393229, 131075, 2, 458765, 131075, 3, 524301, 131075, 4, 262159, 3, 0, 327695, 3, 1, 393231, 3, 2, 458767, 3, 3, 524303, 3, 4, 262160, 65539, 0, 327696, 65539, 1, 393232, 65539, 2, 458768, 65539, 3, 524304, 65539, 4, 589840, 65539, 5, 262161, 131075, 0, 327697, 131075, 1, 393233, 131075, 2, 458769, 131075, 3, 524305, 131075, 4, 262162, 3, 0, 327698, 3, 1, 393234, 3, 2, 458770, 3, 3, 524306, 3, 4, 262163, 65539, 0, 327699, 65539, 1, 393235, 65539, 2, 458771, 65539, 3, 524307, 65539, 4, 589843, 65539, 5, 262164, 131075, 0, 327700, 131075, 1, 393236, 131075, 2, 458772, 131075, 3, 524308, 131075, 4, 262165, 3, 0, 327701, 3, 1, 393237, 3, 2, 458773, 3, 3, 524309, 3, 4, 262166, 65539, 0, 327702, 65539, 1, 393238, 65539, 2, 458774, 65539, 3, 524310, 65539, 4, 589846, 65539, 5, 262167, 131075, 0, 327703, 131075, 1, 393239, 131075, 2, 458775, 131075, 3, 524311, 131075, 4, 262168, 3, 0, 327704, 3, 1, 393240, 3, 2, 458776, 3, 3, 524312, 3, 4, 262169, 65539, 0, 327705, 65539, 1, 393241, 65539, 2, 458777, 65539, 3, 524313, 65539, 4, 589849, 65539, 5, 262170, 131075, 0, 327706, 131075, 1, 393242, 131075, 2, 458778, 131075, 3, 524314, 131075, 4, -327670, 3, 0, -262134, 3, 1, -196598, 3, 2, -131062, 3, 3, -65526, 3, 4, -327669, 65539, 0, -262133, 65539, 1, -196597, 65539, 2, -131061, 65539, 3, -65525, 65539, 4, 11, 65539, 5, -327668, 131075, 0, -262132, 131075, 1, -196596, 131075, 2, -131060, 131075, 3, -65524, 131075, 4, -327667, 3, 0, -262131, 3, 1, -196595, 3, 2, -131059, 3, 3, -65523, 3, 4, -327666, 65539, 0, -262130, 65539, 1, -196594, 65539, 2, -131058, 65539, 3, -65522, 65539, 4, 14, 65539, 5, -327665, 131075, 0, -262129, 131075, 1, -196593, 131075, 2, -131057, 131075, 3, -65521, 131075, 4, -327664, 3, 0, -262128, 3, 1, -196592, 3, 2, -131056, 3, 3, -65520, 3, 4, -327663, 65539, 0, -262127, 65539, 1, -196591, 65539, 2, -131055, 65539, 3, -65519, 65539, 4, 17, 65539, 5, -327662, 131075, 0, -262126, 131075, 1, -196590, 131075, 2, -131054, 131075, 3, -65518, 131075, 4)
script = ExtResource("2_k0sr3")

[node name="PlayerSpawnpoint" parent="." index="0"]
position = Vector2(232.6, 208.6)

[node name="TutorialItem1" parent="." index="1" instance=ExtResource("2_xl3h2")]
position = Vector2(384.6, 208.6)
scale = Vector2(0.2, 0.2)
override_worth = 1

[node name="TutorialItem2" parent="." index="2" instance=ExtResource("2_xl3h2")]
position = Vector2(221.6, 45.4)
scale = Vector2(0.2, 0.2)
override_worth = 2

[node name="TutorialItem3" parent="." index="3" instance=ExtResource("2_xl3h2")]
position = Vector2(86.6, 208.6)
scale = Vector2(0.2, 0.2)
override_worth = 3

[node name="TutorialItem4" parent="." index="4" instance=ExtResource("2_xl3h2")]
position = Vector2(143, 176)
scale = Vector2(0.2, 0.2)
override_worth = 4

[connection signal="collected" from="TutorialItem1" to="." method="_on_item_collected"]
[connection signal="collected" from="TutorialItem2" to="." method="_on_item_collected"]
[connection signal="collected" from="TutorialItem3" to="." method="_on_item_collected"]
[connection signal="collected" from="TutorialItem4" to="." method="_on_item_collected"]
